01-cluster/99-Test-Subnet-Hazelcast/Ingress-Nginx-Test/dashboard/01-NginxApp1-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  namespace: kubernetes-dashboard
  labels:
    app: app1-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1-nginx

  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: app1-nginx
    spec:
      containers:
        - name: app1-nginx
          image: stacksimplify/kube-nginxapp1:1.0.0
          ports:
            - containerPort: 80

      nodeSelector:
        app: api-apps
