01-cluster/99-Test-Subnet-Hazelcast/Ingress-Nginx-Test/dashboard/99-Ingress-basic-nginx-dns-delegated.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-metrics-ingress
  namespace: kubernetes-dashboard
  annotations:    
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
 
spec:
  ingressClassName: nginx
  rules:
   -  host: cluster-devuat.samsassets.com
      http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: app1-clusterip-service
               port:                 
                 number: 80
  tls:
  - hosts:
    - cluster-devuat.samsassets.com
    secretName: cluster-devuat-tls-secret



# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginxapp1-ingress-service
#   annotations:    
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: letsencrypt
#     acme.cert-manager.io/http01-edit-in-place: "true"
# spec:
#   rules:
#     - host: testapp.samsasset.com
#       http:
#         paths:
#           - path: /app1
#             pathType: Prefix
#             backend:
#               service:
#                 name: app1-nginx-clusterip-service
#                 port: 
#                   number: 80
#   tls:
#   - hosts:
#     - testapp.samsasset.com
#     secretName: sapp1-kubedev-link-secret
